# UnityLuminate

./: README.md  package.json  pyproject.toml
booking/: index.html  package-lock.json  package.json  vite.config.js
booking/src/: App.vue  main.js
booking/src/components/: Drawer.vue  Footer.vue  HelloWorld.vue  Room.vue
booking/src/helpers/: index.js
booking/src/icons/: bed.png:Zone.Identifier  beds.png:Zone.Identifier  bill.png:Zone.Identifier  booking (2).png:Zone.Identifier  booking.png:Zone.Identifier  calendar.png:Zone.Identifier  guests.png:Zone.Identifier  log-out.png:Zone.Identifier  logout.png:Zone.Identifier  padlock.png:Zone.Identifier  password-key-svgrepo-com.svg:Zone.Identifier  switch.png:Zone.Identifier  user-svgrepo-com.svg:Zone.Identifier  user.png:Zone.Identifier
booking/src/layouts/: DefaultLayout.vue
booking/src/router/: index.js
booking/src/views/: Billing.vue  Booking.vue  Calendar.vue  Guests.vue  Home.vue  Login.vue  RoomView.vue  index.js
unityluminate/: hooks.py  modules.txt
unityluminate/public/booking/: index.html
unityluminate/public/booking/assets/: Login-DoBZ_-_z.js  Login-nqPOThy2.js  index-C3VRckzD.css  index-CfN6PGEW.css  index-Dg-hxlLI.js  index-fA7v7_Af.js
unityluminate/public/frontend/: index.html
unityluminate/public/frontend/assets/: FontColor.f68d39f4.js  Home.5e60ac14.js  InsertImage.ff1455e8.js  InsertLink.931169a5.js  InsertVideo.e4527f09.js  Login.934ed602.js  index.80ae0efc.css  index.dfca90d7.js  vendor.3a8f86e3.js  vendor.831b2bbf.css
unityluminate/www/: booking.html
(+38 files in other folders)
